refactor: remove header panel, distribute stats into relevant panels